--- a/style.css
+++ b/style.css
@@ -1,39 +1,83 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&display=swap');
-
 * {
-  background-color: #1a1625;
+  box-sizing: border-box;
 }
+
+body {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f7f7f7;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.main {
+  background-color: #fff;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 500px;
+  width: 100%;
+}
+
 .title {
-  font-family: "Press Start 2P";
-  color: forestgreen;
   text-align: center;
+  margin-bottom: 30px;
+}
+
+.title h1 {
+  font-size: 36px;
+  color: #333;
+}
+
+.title h2 {
+  font-size: 20px;
+  color: #666;
 }
 
 .support {
-  padding: 50px;
   text-align: center;
-}
-
-.paypal {
-  text-size: 48px;
-  color: white;
-
-}
-
-.other {
-  text-align: center;
-}
-
-.st {
-  color: white;
-  font-family: poppins;
 }
 
 h3 {
-  font-family: poppins;
-  color: white;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+  padding: 15px 30px;
+  border-radius: 5px;
+  margin: 0 10px;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #007bff;
+  color: #fff;
+}
+
+.paypal-btn {
+  text-decoration: none;
+}
+
+.paypal {
+  background-color: #009cde;
+  color: #fff;
 }
 
 .otherway {
-  color: white;
+  background-color: #333;
+  color: #fff;
 }
