--- a/style.css
+++ b/style.css
@@ -81,3 +81,21 @@ button:hover {
   background-color: #333;
   color: #fff;
 }
+
+.yt {
+  text-align: center;
+  position:relative; top: -200px;
+  height: 50px;
+}
+
+.discord {
+  text-align: center;
+  position: relative;
+  top: -250px;
+  left: 40px;
+}
+
+.madeby {
+  position: relative;
+  top: -750px;
+}
